# meli-test

./: .env.example  .gitignore  README.md  docker-compose.yml  docker-compose_only_db.yml  dockerfile  gunicorn_conf.py  is_mutant.py  locustfile.py  makefile  matrix_diagonals.py  matrix_experiments.py  matrix_neighboorhood.py  matrix_operations.py  matrix_rotation.py  mypy.ini  print_matrix.py  pyproject.toml  requirements.txt  rotate_matrix.py  utils.py
app/: app.py  gunicorn_conf.py  index.html  main.py
app/db/: operations.py
app/models/: dna_matrix.py  person.py
app/orchestator/: orchestator.py
app/routes/: mutant_router.py  stats_router.py
app/scripts/: dna_handler_definition.py  dna_handlers.py  dna_matrix.py  is_mutant.py  matrix_operations.py  person.py
app/settings/: settings.py
app/tasks/: celery_worker.py  celeryconfig.py
app/tests/: conftest.py  fixtures.py  test_database.py  test_handlers.py  test_integration.py  test_matrix_ops.py  test_orchestator.py  test_queue.py
app/utils/: db_connection.py  helpers.py  queue.py
