[tool.poetry]
name = "meli-test"
version = "0.1.0"
description = "Software Development Engineer Test for Mercado Libre"
authors = ["Leonardo HG <leonardohg.ipn@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.19.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
