[tool.poetry]
name = "meli-test"
version = "0.1.0"
description = "Software Development Engineer Test for Mercado Libre"
authors = ["Leonardo HG <leonardohg.ipn@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
mypy = "^0.950"
pydantic = "^1.9.0"
motor = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
locust = "^2.8.6"
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
