[tool.poetry]
name = "meli-test"
version = "0.1.0"
description = "Software Development Engineer Test for Mercado Libre"
authors = ["Leonardo HG <leonardohg.ipn@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
mypy = "^0.950"
pydantic = "^1.9.0"
motor = "^3.0.0"
anyio = "^3.6.1"
trio = "^0.20.0"
httpx = "^0.22.0"
pytest-asyncio = "^0.18.3"
gunicorn = "^20.1.0"
celery = "^5.2.6"
redis = "^4.3.1"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
locust = "^2.8.6"
python-dotenv = "^0.20.0"
coverage = "^6.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
